# PE-generation

./: .gitignore  CLAUDE.md  README.md  fetch_my_tasks.py  main.py  package-lock.json  package.json  pyproject.toml  record.md  test_hwpx_mcp.hwpx.bak  verify.py
.claude/: settings.local.json
modules/: claude_pipeline.py  hwp_converter.js  image_analyzer.py  notion_parser.py  url_validator.py  workspace_launcher.py
rules/: canva_guidelines.md  common_mistakes.md  response_rules.md  word_guidelines.md  writing_principles.md
static/: style.css
templates/: dashboard.html  detail.html
workspaces/: .tasks_cache.json
workspaces/곽민철_33346991/: .mcp.json  CLAUDE.md  analysis.json  analysis.md  memo_log.json  result.docx  result.hwpx  result.hwpx.bak  result.json  result.md  verification.json
workspaces/김동우_33346991/: .mcp.json  CLAUDE.md  analysis.json  analysis.md  memo_log.json  result.docx  result.json  verification.json
workspaces/김선아_33246991/: CLAUDE.md  analysis.json  analysis.md  result.docx  result.json  result.md
workspaces/김하율_32f46991/: CLAUDE.md  analysis.json  analysis.md  memo_log.json  result.json  result.md  verification.json  한국사_역사일기쓰기_김하율.docx
workspaces/남수민_32446991/: CLAUDE.md  analysis.json  analysis.md  memo_log.json  result.json  result.md  verification.json  구글폼_응답.docx  발표대본.docx  예상질문_답변.docx
workspaces/남윤주_32646991/: CLAUDE.md
workspaces/남지원_32c46991/: CLAUDE.md  analysis.json  analysis.md
workspaces/명수빈_32e46991/: CLAUDE.md  analysis.json  analysis.md  result.docx  result.json  verification.json
(+102 files in other folders)
